cmake_minimum_required(VERSION 2.6)

MESSAGE(STATUS ${CMAKE_BINARY_DIR})
MESSAGE(STATUS ${CMAKE_SOURCE_DIR})

if(WIN32)
  set_property(GLOBAL PROPERTY USE_FOLDERS On)
endif(WIN32)

PROJECT(lua)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_definitions(/wd4996)

ADD_SUBDIRECTORY(liblua)
ADD_SUBDIRECTORY(lua)
ADD_SUBDIRECTORY(luac)




