cmake_minimum_required(VERSION 2.6)

MESSAGE(STATUS ${CMAKE_BINARY_DIR})
MESSAGE(STATUS ${CMAKE_SOURCE_DIR})

if(WIN32)
  set_property(GLOBAL PROPERTY USE_FOLDERS On)
  add_definitions(/wd4996)
endif(WIN32)

PROJECT(lua)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})


ADD_SUBDIRECTORY(code_liblua)
ADD_SUBDIRECTORY(code_lua)
ADD_SUBDIRECTORY(code_luac)




